feat(recipes): update deployed hardware from Git
